--- a/Libro.tex
+++ b/Libro.tex
@@ -43,7 +43,7 @@
 \newcommand{\mynewline}{\newline\vspace{0.5em}} % Spazio singolo a capo
 
 % Increase the depth level to include subsubsections
-% \setcounter{tocdepth}{3}
+\setcounter{tocdepth}{2}
 
 \hypersetup{breaklinks=true}
 \makeatletter
@@ -1394,6 +1394,8 @@ al contrario! Serve a non negare nessuna parte di noi, nemmeno le più inaspetta
 possono manifestarsi, saremo in grado di farci trovare più pronti a gestire questi lati che possono essere
 disfunzionali o dannosi per gli altri e noi stessi.
 
+Mi osservo vivere - Pirandello
+
 Non siamo i nostri pensieri! I nostri pensieri nascono senza il nostro controllo, come abbiamo visto con
 l'esercizio dell'elefante, vanno presi come ipotesi che il nostro cervello
 porta alla luce, ma sta poi a noi valutare se prenderle in considerazione o scartale, consapevoli che tutti noi
@@ -2173,39 +2175,11 @@ Pessoa
 \begin{mdframed}[linewidth=1pt]
 Introversione
 
-In Quiet\endnote{\raggedright\url{https://www.amazon.it/dp/8845294064}} di Susan Cain si evidenzia come molti comportamenti tipici degli introversi, pur essendo comuni, sembrino rari solo perché non se ne parla frequentemente. Ad esempio un introverso potrebbe sentirsi inadeguato per aver rifiutato un invito a cena o per restare a casa a leggere. In eventi dove
-viene richiesto di fare gruppo, con balli, canti, o giochi/esercizi di team building, che dovrebbero trasmettere un
-legame comunitario, nell'introverso suscitano l'effetto opposto. Per gli
-introversi sono invece le situazioni intime e private a farli sentire in rapporto.
+In Quiet\endnote{\raggedright\url{https://www.amazon.it/dp/8845294064}} di Susan Cain spiega che non sempre le persone introverse sono riconoscibili con lo stereotipo di una persona timida e taciturna. Le persone che si ricaricano di energie stando da soli, sono generalmente introverse e, viceversa gli estroversi. Un introverso assieme agli altri, può essere l'anima della festa, ma poi ha bisogno di stare da solo per ricaricarsi. Questo comportamento non è sbagliato, se per loro è un valore stare in un certo modo con gli altri, o fare un lavoro a contatto con il pubblico.
 
-Di solito non è difficile essere comprensivi con un partner che ha dormito poco e che torna a casa, dopo una lunga
-giornata di lavoro, troppo stanco per parlare. Per un introverso la sovra-stimolazione sociale può essere altrettanto
-stancante, ma questa fatica è spesso meno riconosciuta o compresa rispetto ad altre forme di stanchezza. Dall'esterno si potrebbe avere la percezione è che questa persona ce l'abbia con noi o che sia scorbutico. Viceversa, può risultare difficile per gli introversi capire quanto possa ferire il proprio silenzio. 
+Di solito non è difficile essere comprensivi con un partner che ha dormito poco e che tornando a casa, dopo una lunga giornata di lavoro, non ha voglia di parlare. Per un introverso la sovra-stimolazione sociale può essere altrettanto stancante, ma questa fatica è spesso meno riconosciuta o compresa rispetto ad altre forme di stanchezza. Dall'esterno si potrebbe avere la percezione è che questa persona ce l'abbia con noi o che sia scorbutico. Viceversa, può risultare difficile per gli introversi capire quanto possa ferire il proprio silenzio. 
 
-A tal proposito nel libro viene riportata la storia di Sarah, un'insegnante di inglese, sposata con Bob, un introverso
-preside di Giurisprudenza che dedica le proprie giornate alla raccolta fondi per la facoltà e che poi, tornato a casa,
-crolla dalla stanchezza. Tutti dicono che quando Bob lavora è una
-persona entusiasmante e divertente. La sera però, dopo cena, mette a posto la cucina per poi leggere il giornale da solo e
-dedicarsi, sempre in solitudine, ai suoi hobby. Verso le nove, si dirige in camera da letto, vuole
-guardare la TV e stare con la moglie, anche se, nemmeno in quel momento, sembra davvero con Sarah.
-
-Una storia simile la ritroviamo nell'Audacia della speranza, di Barack Obama, dove racconta, mentre lavorava al suo primo libro: 
-“trascorrevo spesso la serata rintanato nel mio studio in fondo al nostro
-appartamento. Ciò che io consideravo normale spesso faceva sentire sola Michelle”. Obama attribuisce il proprio
-atteggiamento all'impegno richiesto dalla scrittura e al fatto di essere stato allevato perlopiù come figlio unico, ma
-aggiunge che lui e Michelle hanno imparato, negli anni, a riconoscere le esigenze reciproche e a vederle come legittime. 
-
-La tendenza a valorizzare l’estroversione è particolarmente diffusa in alcune culture occidentali, come quella statunitense, mentre in altre culture, come alcune asiatiche, si tende a valorizzare di più la riservatezza e l’armonia sociale. Per loro socializzare è una parte
-minore delle loro vite e possono preferire di subire il torto per non destabilizzare l'armonia del gruppo. Entrambe queste
-polarizzazioni, se portate all'eccesso non sono vantaggiose.
-
-Non sempre le persone introverse sono riconoscibili con lo stereotipo di una persona timida e taciturna. Capita spesso
-che persone che sembrano estroverse, in realtà, non lo siano e, quando sono a casa si chiudono in loro stessi. 
-Le persone si ricaricano di energie stando da soli, sono generalmente introverse e, viceversa per gli estroversi. Quindi un introverso assieme agli altri,
-può essere l'anima della festa, ma poi ha bisogno di stare da solo per ricaricarsi di energie. Questo
-comportamento non è sbagliato, se per loro è un valore stare in un certo modo con gli altri, o fare un lavoro a contatto
-con il pubblico, ha senso mostrarsi estroversi anche se non lo si è e, potrebbe sorgere in modo naturale. Come potrebbe essere naturale poi trovare
-degli spazi di solitudine dove ricaricarsi.
+La tendenza a valorizzare l’estroversione è particolarmente diffusa in alcune culture occidentali, come quella statunitense, mentre in altre culture, come alcune asiatiche, si tende a valorizzare di più la riservatezza e l’armonia sociale. Per loro socializzare è una parte minore delle loro vite. Entrambe queste polarizzazioni, se portate all'eccesso, non sono vantaggiose.
 \end{mdframed}
 
 \subsubsection{Giudizio e definizioni}
@@ -2240,152 +2214,46 @@ Ad esempio, se accuso qualcuno di narcisismo, la persona, nel tentativo di giust
 Noi siamo quello che siamo,
 indipendentemente dai giudizi, ma definendoci faremo più fatica ad esserlo.
 
-
-
-
-
-
-
-
-
-
-
-Quando parlo di accettazione parlo dei pensieri, degli stati d'animo, di se stessi, non delle
-proprie azioni o comportamenti. La consapevolezza e l'accettazione non vanno confuse con la
-rassegnazione. Accorgersi di essere solitari non serve a rinchiudersi in casa, anzi, sapendo quanto faccia bene stare
-con gli altri, cerchiamo di tendere un pochino di più alla socialità. Se ci accorgiamo che non riusciamo a stare da
-soli, proviamo ogni tanto a stare con noi stessi, sapendo quanto anche questo sia importante. Se siamo troppo irascibili cerchiamo di mantenere la calma o se, viceversa gli altri di solito ci prevaricano, proviamo a imporci, stando attendi a non iper-compensare, ovvero, diventare una persona che inizia a litigare per ogni cosa. Quindi rimuoviamo il concetto
-di “dovrei”: Dovrei essere più estroverso, più socievole, più ambizioso, perché non esiste il giusto o lo sbagliato su
-come viviamo il nostro mondo interiore e che numerose modalità sono necessarie.
-
-Se hai poca autostima forse no sarai contento ma se ne hai molta, potrebbe portare ad uno sforzo continuo per paura di perderla. Come
-sarebbe la tua vita senza autostima e i relativi giudizi di come dovresti essere? Questa idea non basterà a bloccare la
-tua mente dall'emettere giudizi, ma potresti iniziare a vederli per ciò che sono, semplici pensieri.
-Quindi, la prossima volta, tra pochi secondi, che etichetterai qualcosa o qualcuno con qualche definizione, non fare
-niente. Semplicemente annotalo, osservalo, prendine atto, sii
-testimone\endnote{\raggedright\url{https://www.maxfuria.com/le-parole-che-ti-cambiano-la-vita-e-quelle-che-la-peggiorano/}}
-\endnote{\raggedright\url{https://amico-in-affitto.com/2017/08/14/le-parole-che-cambiano-la-vita/}}.
-
-Concludo dicendo che il giudizio non è il male. Il giudizio è necessario per valutare e prendere decisioni. Seriusciamo ad accorgerci di ub giudizio possiamo chiederci: quale bisogno ci sta dietro?
-Perché abbiamo sentito il bisogno di dare questo giudizio? Mentre invece è molto utile il giudizio, quando siamo noi a
-volerlo, in maniera consapevole.
 Nulla è sbagliato in assoluto, anche il mind wandering, ovvero quando la mente inizia a vagare. Possiamo darci degli spazi, ad
 esempio quando siamo sotto la doccia, per lasciare vagabondare la mente, ma allo stesso tempo possiamo invece scegliere
-di essere presenti alle nostre sensazioni, non esiste un giusto o uno sbagliato. Mentre lasciare che la mente vada
+di essere presenti alle nostre sensazioni. Mentre lasciare che la mente vada
 nella sua default mode network, ovvero la sua modalità standard, dove è libera di vagare, è poco funzionale quando
-stiamo lavorando o in qualsiasi situazione necessiti della nostra presenza mentale o attenzione. 
-La default mode network e il mind wandering permettono infatti di essere creativi, non vanno quindi
-demonizzati\endnote{\raggedright\url{https://www.psicologianeurolinguistica.net/2016/06/mindwandering-meditazione.html} }.
-L'ideale sarebbe riuscire a scegliere noi, grazie alla nostra consapevolezza, in quale modalità
-portare la nostra mente, in base al nostro scopo in quel momento.
+stiamo lavorando, studiando o in qualsiasi situazione necessiti della nostra presenza mentale o attenzione. 
+La default mode network e il mind wandering permettono infatti di essere creativi\endnote{\raggedright\url{https://www.psicologianeurolinguistica.net/2016/06/mindwandering-meditazione.html}}.
 
-L'obiettivo è imparare a far sì che questi meccanismi si avviino il meno possibile in modo inconsapevole, campulsivamente. 
+L'obiettivo è imparare a far sì che questi meccanismi si avviino il meno possibile in modo inconsapevole, campulsivamente.
 Come suggersice Gennaro Romagnoli chiediamoci: cos'è importante per me in questo momento?
 
-Non bisogna essere sempre presenti, nemmeno cercare di passare la maggior parte del tempo in questo stato. Se ti viene
-voglia di essere più presente, puoi essere più presente. Se vuoi far vagare la mente, puoi far vagare la mente. è come
-la palestra. Dovresti fare esercizi tutto il giorno? No! Anche se fa meglio camminare che stare seduti, non è sempre
-possibile, né funzionale per ciò che vogliamo diventare. Non vivere l'attimo con ansia. Altrimenti il carpe diem diventa una prigione.
-
-Quando sei felice, facci caso!
 Matt Killingsworth di Track yourhappiness.org ha condotto uno studio in cui oltre quindicimila partecipanti
 documentavano il proprio stato d'animo e ciò che stavano facendo. Sulla base di oltre 650.000
 testimonianze la ricerca ha scoperto che, a prescindere dalle loro attività specifiche, le persone si dichiaravano
-significativamente più felici quando erano completamente immerse nel presente. L'effetto non dipendeva da ciò che stavano pensando. Potevano essere impegnate in un pensiero piacevole, neutro o sgradito.
+significativamente più felici quando erano immerse nel presente. L'effetto non dipendeva da ciò che stavano pensando. Potevano essere impegnate in un pensiero piacevole, neutro o sgradito.
 Quand'erano concentrate su elementi esterni al presente erano meno felici. 
+
+Ciononostante, Non bisogna essere sempre presenti. Se ti viene voglia di essere più presente, puoi essere più presente. Se vuoi far vagare la mente, puoi far vagare la mente. Come la palestra: dovresti fare esercizi tutto il giorno? No! Anche se fa meglio camminare che stare seduti, non è sempre
+possibile, né funzionale per ciò che vogliamo fare. Anche il cercare di essere sempre nel presente, perchè sappiamo che fa bene, rischiamo di farlo diventare una prigione e viverlo con ansia.
 
 \begin{mdframed}[linewidth=1pt]
 Motivazione Vs Metodo
 
-Lo studio di Cheung et al. (2014) suggerisce che la differenza tra individui con alto o basso autocontrollo è in gran parte dovuta alle strategie adottate per raggiungere gli obiettivi piuttosto che al tentativo di sopprimere gli impulsi. Il benessere è legato in un certo modo a delle regole, a mettere in atto strategie funzionali e comportamenti desiderati, adottando approcci che, pur mirando a obiettivi a lungo termine, non escludano la possibilità di godere dei piaceri momentanei. Ma come
-riuscirci in un mondo pieno di tentazioni o quando i nostri obiettivi confliggono tra loro? 
-
-Quando riusciamo ad avere delle routine o delle buone abitudini diventiamo in grado di mettere in atto comportamenti
-desiderati con meno sforzo in quanto automatiche. Il perseguimento di un obiettivo risulta quindi facilitato
-dalla messa in atto di abitudini, piuttosto che dalla soppressione degli impulsi indesiderati, che potrebbero prosciugare le
-risorse di autocontrollo rischiando il fallimento, lasciandoci quindi più energie per le nostre
-attività\endnote{\raggedright\url{https://www.stateofmind.it/2021/05/autocontrollo-impulsi/} }. Anche il prendersi delle pause, seppur
-sia vista come una cosa opposta alla produttività, possono invece ridarci nuove energie e farci ritornare più motivati,
-se fatte entra una certa misura. In Diventa chi sei\endnote{\raggedright\url{https://www.amazon.it/dp/B079TLH7PK} }, Emilie Wapnick
-consiglia 40 minuti, ma possono essere di più o di meno a seconda della persona. Un altro consiglio per trovare la
-motivazione è: iniziare!
-Uno studio\endnote{\raggedright\url{https://www.sleepfoundation.org/sleep-hygiene/coffee-nap}} ha confermato che un breve pisolino di 15-20 minuti può essere più efficace del caffè per aumentare l’energia e la concentrazione.
-Lo studio “Close, and ye shall find: eye closure during thinking enhances creativity”\endnote{\raggedright\url{https://www.nature.com/articles/s41599-018-0138-0.pdf}} suggerisce che chiudere gli occhi per due minuti durante il pensiero può stimolare la generazione di idee più creative e flessibili.
-
-Frasi come: trova il lavoro che ami e non lavorerai nemmeno un giorno, non sono del tutto vere in quanto la scintilla,
-la musa, la voglia, la motivazione, arrivano e si esauriscono, quello che resta poi è l'essere organizzati,
-disciplinati e lavorare. Anche godersi il processo o il viaggio invece del traguardo, va preso in maniera relativa.
-Questo perché è improbabile che ci piaceranno tutte le cose del processo e, se dovessimo mettere in dubbio la scelta
-del nostro viaggio perché non ci sta piacendo tutto, dall'inizio alla fine, rischiamo di mettere le basi per la nostra insoddisfazione. Come al solito uno sguardo va alle aspettative perché possono frenate la
-motivazione. Se io mi dico: devo arrivare la, ottenere quella cosa entro X tempo, potrei non farcela, perché ci sono
-fattori indipendenti dal mio agire che possono interferire e demotivarmi, facendoci sentire non all'altezza.
-
-Non esiste una formula che vada bene per tutti. Per qualcuno l'ideale è trasformare la propria
-passione in lavoro, mentre per altri è fare un lavoro remunerativo o che lasci abbastanza tempo libero proprio per
-poter coltivare le proprie passioni fuori dal lavoro.
-
-Altre volte siamo demotivati perché non riusciamo a completare le cose che ci siamo prefissati. Come spiega Chris
-Guillebeau, “[noi] sopravvalutiamo quello che possiamo realizzare in un solo giorno, ma sottovalutiamo quello che
-possiamo fare in un anno”. Non hai bisogno della motivazione per fare le cose ma di metodo. Spesso dimentichiamo che la
-parola Motivazione è formata da motivo e azione. Un invito all'azione. La passione è molto forte all'inizio ma col tempo potrebbe diminuire e allora
-non sarà più quest'ultima a farci muovere ma un metodo, una struttura.
+La parola Motivazione è formata da motivo e azione. La passione è molto forte all'inizio ma col tempo potrebbe diminuire e allora non sarà più quest'ultima a farci muovere ma un metodo, una struttura.
+Anche godersi il processo o il viaggio invece del traguardo, va preso in maniera relativa.
+Questo perché è improbabile che ci piaceranno tutte le cose del processo e, se dovessimo mettere in dubbio la scelta del nostro viaggio perché non ci sta piacendo tutto, dall'inizio alla fine, rischiamo di mettere le basi per la nostra insoddisfazione. 
 
 Sulla motivazione ci sono due teorie: 
-Dire a tutti dei tuoi obiettivi, così sarai spronato per mantenere la coerenza davanti ai loro occhi.
-L'altra teoria invece dice di non dirlo in giro, per evitare che la gente ti demotivi. Queste teorie sono vere entrambe, l'ideale è usare un mix di queste due tecniche e dire i propri obiettivi solo alle persone vicine a noi che sappiamo che non ci feriranno.
-Anche le teorie tipo fake it until you make it, ovvero, fai finta finché non diventa vero, possono talvolta funzionare aumentando la fiducia, ma in altri casi possono portare a una falsa percezione di aver già raggiunto il traguardo, riducendo la motivazione ad agire.
+Dire a tutti dei tuoi obiettivi, così sarai spronato per mantenere la coerenza davanti ai loro occhi e non dirlo in giro, per evitare che la gente ti demotivi. Possiamo usare un mix di queste due tecniche, dicendolo solo alle persone vicine che non ci feriranno.
+Anche le teorie tipo fake it until you make it, ovvero, fai finta finché non diventa vero, possono talvolta funzionare aumentando la fiducia, ma molto spesso possono portare a una falsa percezione di aver già raggiunto il traguardo, riducendo la motivazione ad agire.
 
-Scott Adams dice che per aver successo o sei il migliore di tutti a fare una certa cosa, ma è quasi impossibile, o hai
-un set di due o più abilità in cui sei nel gruppo dei 25\% dei più bravi, così da creare una competenza molto specifica
-in cui sei tra i migliori. La maggioranza della gente ha come passioni arte e sport, attività difficilmente
-convertibili in lavoro, per questo non dovremmo sentirci inadeguati se non riuscissimo a convertire le nostre passioni
-in un lavoro.
-
-Secondo Robert J. Vallerand, la passione ha due principali connotazioni: armoniosa o ossessiva. Quelli che provano una
-passione armoniosa si impegnano nel lavoro perché ne traggono una gioia intrinseca, e la loro professione convive in
-armonia con le altre attività della loro vita. Al contrario, con la passione ossessiva, si ha
-un'incontrollabile urgenza di lavorare vivendo in maniera conflittuale la passione e le altre
-attività presenti nella loro vita.
+Non esiste una formula che vada bene per tutti. Per qualcuno l'ideale è trasformare la propria passione in lavoro, mentre per altri è fare un lavoro remunerativo o che lasci abbastanza tempo libero proprio per poter coltivare le proprie passioni fuori dal lavoro, magari perchè sono poco remunerative o magari per non farle diventare un lavoro, rovinandole perchè inquinate di imegni e scadenze, svuotandole di spontaneità.
 
 La necessità di un lavoro che assecondi le proprie passioni come requisito di una vita ben spesa potrebbe essere un bisogno nato dalla
 generazione Y, ovvero quella nata tra gli anni 80 e 2000. Questa ricerca sembra aver portato più stress e
 insoddisfazione rispetto alle generazioni precedenti che sceglievano un qualsiasi lavoro potesse dar loro stabilità
 economica. Con questo non voglio dire che un lavoro in linea con le nostre passioni sia da evitare, al contrario, ma se la ricerca o il lavoro vengono vissuti in maniera ossessiva, potrebbe essere più salutare un approccio di accettazione, anche di un lavoro meno appagante, piuttosto che persistere in una dinamica distruttiva. A volte non aver scelta dona più libertà.
 
-Per alcune persone è più funzionale dedicare tutta la vita a un progetto, per persone multipotenziali no. Passare da un tema
-all'alto, in maniera lenta, dandosi il tempo di approfondire un argomento finché suscita interesse
-in noi, che può durare anni, si chiama slow motion multitasking (in quanto il multitasking simultaneo nello stesso
-momento, non esiste). Questo saltellare da un tema all'altro, verrebbe visto negativamente, come
-una persona con le idee poco chiare. Ma questo ha diversi vantaggi, oltre all'annoiarsi meno,
-quello che si apprende in una materia lo si può portare nella risoluzione di problemi in ambiti completamente diversi
-e, questa contaminazione, si può anche chiamare in un altro modo:
-creatività\endnote{\raggedright\url{https://www.youtube.com/watch?v=O3YFD9T7fTc} }.
+Possiamo anche saltellare da un tema all'altro, seppur sia visto negativamente. Questo ha diversi vantaggi, oltre all'annoiarsi meno, quello che si apprende in una materia lo si può portare nella risoluzione di problemi in ambiti completamente diversi (creatività). Sembra che queste persone mollino quando l'attività diventa troppo complicata, al contrario, questo avviene quando quest'ultima non ha più nulla di stimolante da offrire. Bisogna stare attenti però a non darsi questa scusa per giustificare la scarsa concentrazione.
 
-Solitamente viene malvisto lasciare a metà le cose e saltare da un progetto all'altro. Ma dipende
-qual è l'obiettivo. Spesso per i multipotenziali l'obiettivo è imparare
-qualcosa, quindi quando questo viene raggiunto si passa a qualcos'altro anche se la parte pratica
-non è stata ultimata. Sembra che queste persone mollino quando l'attività diventa troppo
-complicata, al contrario, questo avviene quando quest'ultima non ha più nulla di stimolante da
-offrire. Bisogna stare attenti però a non darsi questa scusa per giustificare la scarsa concentrazione.
-
-Routine, abitudini e creatività non sono infatti in contraddizione. Come diceva Kobe Bryant la creatività ha origine
-dalla struttura. Quando hai certi parametri e una struttura, puoi essere creativo al loro interno. Se non hai struttura
-rischi di fare solo cose a vanvera. Per fare un discorso, ad esempio, difficilmente sarai spontaneo. Se lo prepari bene, puoi usare quello come punto di partenza per fare delle variazioni ed essere spontaneo. Regole e routine alleggeriscono il fardello cognitivo garantendoci lo spazio mentale
-necessario alla creatività.
-
-Se non sei pronto rischi di muoverti a caso, facendo confusione e penserai solo a sistemare il problema rendendoti difficile la spontaneità.
-
-La passione non è fatta per durare, mentre le abitudini si.
-
-Un altro esempio è la pigrizia. Secondo i ricercatori della Ohio State University analizzando gruppi di studenti che si
-rilassavano su un divano, hanno osservato che i partecipanti che pensavano fosse sbagliato impiegare il tempo senza
-"produrre" si godevano meno il relax . Al contrario l'idea cambiava se
-si pensava che l'attività svolta nel tempo libero potesse portare ad un beneficio a lungo termine. Non è sbagliata
-l'attività in sé, ma piuttosto il pensare che sia tempo sprecato è dannoso per la salute. La sensazione
-di sprecare il tempo, ci dice qualcosa di fondamentale su di noi, non ci dice qualcosa sulla realtà. Forse non stiamo
-vivendo in linea coi nostri valori o forse il nostro giudice interno è troppo esigente. Semplicemente possiamo notarlo. Non
-fare niente non è mai fare niente: ti obbliga a riflettere e a compiere libere associazioni, che si possono rivelare
-utili. Gennaro Romagnoli nella puntata 81 consiglia di allenarsi a non fare niente, per non avere il pilota automatico sempre sul "fare".
+Routine, abitudini e creatività non sono infatti in contraddizione. Come diceva Kobe Bryant la creatività ha origine dalla struttura. Quando hai certi parametri e una struttura, puoi essere creativo al loro interno. Se non hai struttura rischi di fare solo cose a vanvera. Ad esempio: chi sa fare un discorso spontaneo su temi complessi? Chi l'ha fatto tante volte o l'ha preparato e lo usa come punto di partenza per fare delle variazioni. Regole e routine alleggeriscono il fardello cognitivo garantendoci lo spazio mentale necessario alla creatività.
 \end{mdframed}
 
 \subsubsection{Aspettative}
@@ -2441,7 +2309,7 @@ Nelle ricerche di Jutta Heckhausen su donne in premenopausa senza figli, è stat
 Nel libro "Troppo comodi"\endnote{\raggedright\url{https://www.amazon.it/dp/8836201474}} viene spiegato il concetto di adattamento edonico (Brickman \& Campbell, 1971) che ha osservato che quando le condizioni ci sono favorevoli, potremme abbassarsi la soglia di ciò che consideriamo un problema, il che può portare a focalizzare l'attenzione su un numero maggiore di preoccupazioni. Potremmo dire che quando abbiamo certe preoccupazioni più astratte, è una fortuna, perchè non abbiamo grossi problemi in quel momento. Il libro consiglia, tra le varie cose, di passare 20 minuti nella natura, tre volte a settimana, per fare una pausa e staccare e, durante questo tempo, i livelli di colesterolo tendono a ridursi\endnote{\raggedright\url{https://www.frontiersin.org/articles/10.3389/fpsyg.2019.00722/full}}. Uno studio ha osservato questo fenomeno anche nei film: se solitamente guardi commedie sarai più coinvolto da situazioni tese rispetto a chi guarda thriller, perché meno abituato\endnote{\raggedright\url{https://www.frontiersin.org/journals/behavioral-neuroscience/articles/10.3389/fnbeh.2024.1396811/full}}.
 
 \begin{mdframed}[linewidth=1pt]
-Capita che quando desideriamo qualcosa stiamo cercando la sensazione che crediamo ci darà. 
+Storie di accettazione
 
 C'è un'antica storia taoista su un contadino il cui cavallo scappa.
 "Che sfortuna" gli dice suo fratello. Il contadino scrolla le spalle.
@@ -2457,21 +2325,17 @@ quella è senza dubbio la notizia migliore di tutte. "Un bene, un male,
 chissà" ripete lui. Il contadino in questa storia non si perde nel “che cosa succederebbe se” ma
 si concentra su “ciò che è”, senza giudicare il momento.
 
-Molto simile anche la parabola zen che racconta:
-Un giovane monaco si reca dal suo maestro e gli dice, preoccupato:
-"Maestro, la mia meditazione è un disastro! La mia mente è agitata, mi distraggo continuamente, mi sento frustrato e non riesco a trovare pace."
-
-Il maestro, con calma, lo guarda e risponde:
+Molto simile anche la parabola zen che racconta:\newline
+Un giovane monaco si reca dal suo maestro e gli dice, preoccupato:\newline
+"Maestro, la mia meditazione è un disastro! La mia mente è agitata, mi distraggo continuamente, mi sento frustrato e non riesco a trovare pace."\newline
+Il maestro, con calma, lo guarda e risponde:\newline
+"Passerà."\newline
+Dopo qualche tempo, il monaco ritorna, questa volta raggiante di gioia:\newline
+"Maestro, la mia meditazione è meravigliosa! Mi sento in pace, concentrato, pieno di beatitudine!"\newline
+E ancora una volta il maestro, con la stessa calma, risponde:\newline
 "Passerà."
 
-Dopo qualche tempo, il monaco ritorna, questa volta raggiante di gioia:
-"Maestro, la mia meditazione è meravigliosa! Mi sento in pace, concentrato, pieno di beatitudine!"
-
-E ancora una volta il maestro, con la stessa calma, risponde:
-"Passerà."
-
-
-Possiamo pensare di tenere un piccolo quaderno dei desideri, con  anche le piccole cose:
+Possiamo pensare di tenere un piccolo quaderno dei desideri, con anche le piccole cose:
 ho bisogno di finire questo, di comprare quest'altro, di organizzare quello ecc…
 A fianco di ogni voce aggiungere: anche quando lo avrò ottenuto, potrebbe rimanere tutto come prima.
 In modo da ridurre le illusioni che il futuro sarà necessariamente migliore e vivere il presente.
@@ -2499,20 +2363,6 @@ insoddisfatti di ciò che non abbiamo.
 Anche paragonarsi verso il basso, con persone che crediamo peggiori di noi non ci aiuterà. 
 
 Per alcune persone, l'unica gioia, è che stanno facendo meglio di qualcun altro. Se gli togli questo, possono percepire un grande vuoto. l'unica gioia è qualcuno sta facendo peggio di te. Quanto è malato tutto ciò? Fai qualcosa perché è magnifico, non perché qualcuno non lo fa bene come te\endnote{\raggedright\url{https://www.youtube.com/watch?v=HeX9kuhSLkE}} - Sadhguru
-
-\begin{mdframed}[linewidth=1pt]
-\textbf{Cosa fare se qualcuno sta per aggredirti fisicamente?}
-
-Se ti trovi in una situazione in cui qualcuno sta per aggredirti fisicamente, è fondamentale evitare lo scontro fisico per molte ragioni. Non solo per evitare lunghe battaglie legali e possibili sanzioni che possono superare le diverse migliaia di euro, ma anche per non compromettere la tua fedina penale.
-
-Come evitare lo scontro?\endnote{\raggedright\url{https://www.youtube.com/watch?v=Y7be57VAiIU}}
-\begin{itemize}
-\item Mantieni la calma: Usa una voce calma, lenta e pacata. Cerca di apparire piccolo, ma non troppo, e guarda l’aggressore negli occhi senza fissarlo troppo intensamente. È importante essere calmi, ma evita di dire “calmati”, poiché questo potrebbe irritare ulteriormente la persona.
-\item Mantieni la distanza: Mostra le mani in alto per far vedere che sei disarmato e non intendi attaccare. Questo gesto può anche essere utile per difenderti rapidamente, come nel pugilato, ma deve essere fatto solo in casi estremi. Altrimenti, potrebbe sembrare che tu sia pronto allo scontro, il che potrebbe metterti dalla parte del torto legalmente.
-\item Non gridare genericamente 'aiuto': a causa dell'effetto spettatore, è più efficace rivolgersi direttamente a una sola persona, indicandola chiaramente (es. 'Tu con la giacca blu, chiama la polizia!')
-\end{itemize}
-Seguendo questi consigli, puoi cercare di disinnescare la situazione e proteggerti senza ricorrere alla violenza.
-\end{mdframed}
 
 Paul Watzlawick in Istruzioni per rendersi infelici, Ci fornisce
 numerosi esempi: se vi concentrate sulle vostre scarpe, vi accorgerete che in alcuni punti possano essere scomode,
@@ -2680,27 +2530,21 @@ vita possa essere così importante da avere un senso e, smettere di trovare appa
 quest'ultimo. I bisogni della specie possono confliggere dai bisogni individuali.
 
 \begin{mdframed}[linewidth=1pt]
-Qual è l'età in cui siamo più lucidi?
+Qual è l'età migliore?
 
-Tra i 35 e i 40 anni secondo lo studio dell'Università Ludwig Maximilian di Monaco pubblicata su Proceedings of the
-National Academy of Sciences. I ricercatori analizzando più di 24000 partite di scacchi, paragonandole con quelle che
-il computer indicava come “ottimali”, hanno osservato che in queste fasce d'età si riscontrano i risultati migliori. Le prestazioni degli scacchisti aumentavano dai 20 anni in su raggiungendo il picco a 35 anni, per poi tendere a declinare dai 45 anni in poi. 
-
-Altri studi invece sono ancora più ottimisti, infatti la storia è piena di personaggi che hanno avuto successo dopo i 40 anni. Uno studio del MIT ha rilevato che i fondatori di startup di maggior successo hanno in media circa 45 anni, suggerendo che l’esperienza accumulata può avere un impatto positivo nelle fasi iniziali di un’impresa. Anche nell'arte e
+La storia è piena di personaggi che hanno avuto successo dopo i 40 anni. Uno studio del MIT ha rilevato che i fondatori di startup di maggior successo hanno in media circa 45 anni, suggerendo che l’esperienza accumulata può avere un impatto positivo nelle fasi iniziali di un’impresa. Anche nell'arte e
 nella scienza notiamo che i giovani sono sì più produttivi, ma difficilmente producono i loro capolavori.
 
-Secondo uno studio pubblicato su Intelligence\raggedright\url{https://www.sciencedirect.com/science/article/pii/S0160289625000649} il funzionamento psicologico complessivo raggiunge il suo massimo tra i 55 e i 60 anni e, la stabilità emotiva e la coscienziosità, continuano a migliorare anche oltre i 70 anni. Addirittura, la capacità di prendere decisioni ponderate migliora fino agli ottant'anni.
+Secondo uno studio pubblicato su Intelligence\raggedright\url{https://www.sciencedirect.com/science/article/pii/S0160289625000649} il funzionamento psicologico complessivo raggiunge il suo massimo tra i 55 e i 60 anni e, la stabilità emotiva e la coscienziosità, continuano a migliorare anche oltre i 70 anni. Addirittura, la capacità di prendere decisioni ponderate migliora fino agli 80 anni.
 
 Altri studi osservano che gli anziani, mediamente sono più soddisfatti della vita e fanno meno errori sul lavoro
-rispetto ai colleghi più giovani con le stesse mansioni. Inoltre lo studio fa emergere come vari aspetti del pensiero e
+rispetto ai colleghi più giovani con le stesse mansioni. Anche vari aspetti del pensiero e
 della memoria migliorano con l'età\endnote{\raggedright\url{https://psycnet.apa.org/record/2003-05349-016}
 \raggedright\url{https://psycnet.apa.org/buy/2004-21181-008}
 \raggedright\url{https://www.tandfonline.com/doi/abs/10.1080/09658210701754351}}.
 
 Uno studio (Becca Levy et al., JPSP 2002) ha osservato che un atteggiamento positivo verso l’invecchiamento può essere associato a una maggiore longevità, anche fino a 7 anni, ma la relazione è complessa e non necessariamente causale. Se sei anziano e pensi di aver dimenticato
-qualcosa potresti credere che sia per la tua età, o invece pensare che ogni tanto capita a tutti di dimenticare le cose. Altrimenti rischia di diventare una profezia che si auto avvera, perché allenerai meno la tua memoria, siccome sei
-convinto che tanto tutto sia inutile. Tanti stereotipi funzionano così. Se sei donna
-e pensi che le ragazze non siano brave in matematica, probabilmente non ti impegnerai e magari andrai peggio in questa materia.
+qualcosa potresti credere che sia per la tua età, o invece pensare che ogni tanto capita a tutti di dimenticare le cose. Altrimenti rischi di allenere meno la memoria, siccome sei convinto che tanto tutto sia inutile.
 
 Rispetta l'anziano che sarai - Anonimo
 
@@ -2710,13 +2554,10 @@ Vaghetto\endnote{\raggedright\url{https://www.lastampa.it/milano/2018/04/07/news
 }, che ha iniziato a correre per la prima volta a 60 anni, perché voleva fare la maratona di New York! E ci è riuscito
 diverse volte! All'età di 80 anni riesce a correre anche per 100km! Anche il metabolismo, non
 sembra cambiare così tanto con l'età secondo uno studio della Duke
-University\endnote{\raggedright\url{https://www.science.org/doi/10.1126/science.abe5017} } che ha analizza le calorie medie bruciate
+University\endnote{\raggedright\url{https://www.science.org/doi/10.1126/science.abe5017}} che ha analizza le calorie medie bruciate
 quotidianamente da oltre 6.600 persone di 29 Paesi in tutto il mondo, con un'età variabile da appena 8 giorni a 95
-anni. I ricercatori hanno individuato che nel primo anno e mezzo di vita il metabolismo è molto veloce perché ancora
-impegnato nella formazione dei vari organi, dopodichè si verifica un primo rallentamento che dura fino ai 5 anni di
-età. A questo punto inizia a rallentare piano piano e dai venti ai sessant'anni resta stabile. 
-Il vero declino è stato riscontrato a novant'anni, dove il metabolismo è del 26\% più basso
-rispetto alla mezza età. L’aumento di peso è legato principalmente al bilancio calorico, ma può essere influenzato anche da fattori individuali come livelli di attività, composizione corporea e condizioni ormonali.
+anni. I ricercatori hanno osservato che il metabolismo è molto veloce fino ai 20 anni e resta piuttosto stabile fino ai 60. 
+Il vero declino è stato riscontrato a 90 anni, dove il metabolismo è del 26\% più basso rispetto alla mezza età. Negli anni cambia quindi più lo stile di vita che il metabolismo.
 \end{mdframed}
 
 Per la nostra specie, per la terra, per l'universo: è la stessa cosa ubriacarsi in solitudine o guidare i popoli - Sartre 
@@ -2758,8 +2599,7 @@ sarà il viaggio per raggiungerli. Se invece riuscirai a raggiungere i tuoi obie
 il viaggio e una per il risultato.
 
 \begin{mdframed}[linewidth=1pt]
-Storia tratta dal libro “Il caffè alla fine del
-mondo”\endnote{\raggedright\url{https://www.amazon.it/dp/B07QX97V5B}}
+Storia tratta dal libro “Il caffè alla fine del mondo”\endnote{\raggedright\url{https://www.amazon.it/dp/B07QX97V5B}}
 
 Un affarista chiede a un pescatore come passa le giornate\newline
 Pescatore: faccio colazione con la mi famiglia, pesco, poi la sera passeggio con mia moglie guardando i figli nuotare
@@ -6251,7 +6091,7 @@ Secondo numerosi studi, la risposta è negativa. Un'analisi di 15 studi ha rilev
 
 In Italia, non esiste un rapporto ufficiale del Viminale sugli omicidi con armi da fuoco legalmente detenute, una mancanza significativa. Un’indagine svolta da Fire-Transcrime in collaborazione con l'Università Cattolica di Milano ha osservato che, nei paesi europei, gli omicidi con armi da fuoco tra il 2010 e il 2015 hanno causato vittime principalmente in ambito familiare (34\%) e interpersonale (32\%), mentre solo il 21\% è attribuibile a gruppi criminali organizzati, il 10\% ad atti criminali e il 3\% a motivi socio-politici. Questo suggerisce che in Europa, e presumibilmente anche in Italia, la maggior parte degli omicidi con armi da fuoco avviene in contesti familiari o interpersonali (66\%)\endnote{\raggedright\url{https://www.rivistailmulino.it/a/legittima-difesa-una-modifica-ingannevole-e-pericolosa}}.
 
-Prima di ipotizzare una legalizzazione più estesa della legittima difesa armata, sarebbe opportuno introdurre incentivi per l'installazione di sistemi di sicurezza passivi, come antifurti, videosorveglianza o dispositivi dissuasivi non letali. Questi strumenti, oltre a essere più sicuri, contribuiscono a prevenire i reati senza introdurre nuovi rischi all'interno delle abitazioni.
+Prima di ipotizzare una legalizzazione più estesa della legittima difesa armata, sarebbe opportuno introdurre incentivi per l'installazione di sistemi di sicurezza passivi, come antifurti, videosorveglianza o dispositivi dissuasivi non letali. Questi strumenti, oltre a essere più sicuri, contribuiscono a prevenire i reati senza introdurre nuovi rischi all'interno delle abitazioni. Anche se nella ragione, è fondamentale evitare sempre lo scontro anchhe solo per evitare lunghe battaglie legali che possono superare le diverse migliaia di euro.
 
 In sintesi, gli studi suggeriscono che la presenza di armi in casa non aumenta la sicurezza personale, ma accresce il rischio di incidenti. Questi incidenti stanno portando a soluzioni creative come la PaintCam\endnote{\raggedright\url{https://www.kickstarter.com/projects/paintcam/paintcam-face-recognition-and-paintball-firing-security-system}} una videocamera di sorveglianza che spara vernice e lacrimogeni agli intrusi.
 \end{mdframed}
